{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 13,
  "lineage": "632a3c71-fcb9-a00c-6663-2271a726230d",
  "resources": [
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:098179940501:instance/i-0ab8bbc9811c08238",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab8bbc9811c08238",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "suthari",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f92d748ba601f0b4",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_ip": "54.172.124.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dad42d478797725d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09b4eb455a0073a3b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04687f0a23592fe7f",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b4eb455a0073a3b"
            ]
          },
          "dependencies": [
            "module.webserver.aws_security_group.webserver",
            "module.webserver.aws_subnet.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098179940501:internet-gateway/igw-08e0ddb01304458fa",
            "id": "igw-08e0ddb01304458fa",
            "owner_id": "098179940501",
            "tags": {
              "Name": "web"
            },
            "vpc_id": "vpc-089627d525235c3a7"
          },
          "dependencies": [
            "module.webserver.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-042c17a315288f59f",
            "owner_id": "098179940501",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e0ddb01304458fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-089627d525235c3a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver.aws_internet_gateway.gw",
            "module.webserver.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061dbe9b9d5765821",
            "route_table_id": "rtb-042c17a315288f59f",
            "subnet_id": "subnet-04687f0a23592fe7f"
          },
          "dependencies": [
            "module.webserver.aws_internet_gateway.gw",
            "module.webserver.aws_route_table.r",
            "module.webserver.aws_subnet.webserver",
            "module.webserver.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098179940501:security-group/sg-09b4eb455a0073a3b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4eb455a0073a3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_access",
            "name_prefix": "",
            "owner_id": "098179940501",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-089627d525235c3a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098179940501:subnet/subnet-04687f0a23592fe7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04687f0a23592fe7f",
            "map_public_ip_on_launch": false,
            "owner_id": "098179940501",
            "vpc_id": "vpc-089627d525235c3a7"
          },
          "dependencies": [
            "module.webserver.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098179940501:vpc/vpc-089627d525235c3a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc1f7e6555aadf18",
            "default_route_table_id": "rtb-04c76924b967cec36",
            "default_security_group_id": "sg-0ad32484616e582ab",
            "dhcp_options_id": "dopt-2e7f0454",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089627d525235c3a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c76924b967cec36",
            "owner_id": "098179940501"
          }
        }
      ]
    }
  ]
}